@@ -4,19 +4,15 @@
 			{Label $definitions.label}
 		</span>
 		{if $definitions.wConf.negation}
-			<span class="negationButton">
-				<span id="{$definitions.widgetID}-negation" class="negation">
-					<span class="true" {if $definitions.negate == 0}style="display:none"{/if}>{Label $definitions.wConf.negation.labelTrue}</span>
-					<span class="false" {if $definitions.negate == 1}style="display:none"{/if}>{Label $definitions.wConf.negation.labelFalse}</span>
-				</span>
-				<span class="negationRgt"><!-- --></span>
+			<span id="{$definitions.widgetID}-negation" class="negation negationButton">
+				<span class="true" {if $definitions.negate == 0}style="display:none"{/if}>{Label $definitions.wConf.negation.labelTrue}</span>
+				<span class="false" {if $definitions.negate == 1}style="display:none"{/if}>{Label $definitions.wConf.negation.labelFalse}</span>
 			</span>
 		{/if}
 		<span title="{Label search.ext.filterwidget.condtion.remove}" class="widgetClose">
 			<a href="javascript:void(0)" onclick="Todoyu.Ext.search.Filter.removeCondition('{$definitions.widgetID}')">remove widget</a>
 		</span>
 
-		<span class="widgetheaderRgt"></span>
 		<span class="clear"></span>
 	</div>
 	<div class="widgetbody">
