@@ -3,6 +3,7 @@ todoyu search changelog
 search 1.5.0 - not released yet
 	* Bugfix: Added missing icon
 	* Changed: Text-cropping over css and css clean-up
+	* Changed: Removed widget elements former workaround background images
 	* Added: Ability to toggle visibility for separator
 	* Require: core 2.3
 	* Bugfix: Tables from filterset filter were fetched with whitespaces and not removed by removeTables option
